# dia-chung

./: .env.example  .gitignore  DECISIONS.md  Nghị-định-174-2026-NĐ-CP.docx  README.md  SCORE.md  SECURITY.md  ask.txt  cloudflare.d.ts  debug_fb.py  fb_login_debug.html  out.txt  pyproject.toml  requirements.txt  run_facebook_crawler.py  test_bd.py  test_bd2.py  test_bd3.py  test_bd4.py  test_bd5.py  test_bd_final.py  test_fb.py  tsconfig.tsbuildinfo
.agents/: AGENTS.md
.openai/: hosting.json
app/: globals.css  layout.tsx  mock-data.ts  page.tsx  types.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/eval/: README.md  cases.json  cases_dvhc_draft.json  smoke.py
backend/legal_radar/: __init__.py  auth.py  cli.py  engine.py  guardrails.py  model.py  normalization.py  observability.py  pipeline.py  providers.py  report.py  resilience.py  settings.py  source_classifier.py  source_search.py  storage.py  verification.py  vn_normalize.py
backend/legal_radar/api/: data_access.py  dependencies.py  main.py  schemas.py
backend/legal_radar/api/routes/: auth.py  cases.py  crawl.py  ops.py  qa.py  queue.py  verify.py
backend/legal_radar/crawlers/: __init__.py  facebook.py  filter.py  news.py  scheduler.py  youtube.py
backend/scripts/: export_openapi.py  generate_report.py  ingest_data.py  migrate_jsonl_to_sql.py
backend/tests/contract/: test_openapi.py
backend/tests/integration/: test_api.py  test_providers_live.py
backend/tests/unit/: conftest.py  test_auth.py  test_crawlers.py  test_engine.py  test_eval_cases.py  test_guardrails.py  test_integration.py  test_kg.py  test_kg_data.py  test_model.py  test_normalization.py  test_observability.py  test_paths.py  test_pipeline.py  test_resilience.py  test_source_classifier.py  test_sql_store.py  test_study_cases.py
contracts/: README.md  llm-extraction.schema.json  openapi.json  queue-item.schema.json
data/: kg_edges.json  kg_nodes.json
deploy/: Dockerfile.backend  Dockerfile.frontend  README.md  compose.yaml
docs/: AI_COLLABORATION_LOG.md  CRAWLERS_SETUP.md  EVALUATION_AND_PILOT.md  METRICS.md  OPERATIONS_RUNBOOK.md  SESSION_LOG.md  (+2 more)
(+93 files in other folders)
