[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8.3,<9", "ruff>=0.9,<1"]

[project.scripts]
legal-radar = "legal_radar.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

